--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -156,3 +156,12 @@ input:invalid {
 input:valid {
     border-color: #2ecc71;
 }
+
+
+.landing_container {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+}
