--- a/questionnaire/templates/questionnaire/success.html
+++ b/questionnaire/templates/questionnaire/success.html
@@ -12,11 +12,11 @@
         <div class="landing_container">
 
             <div class="landing_img">
-                <img src="{% static 'img/success.webp' %}" />
+                <img src="{% static 'img/success.webp' %}" width="400px" />
             </div>
             <h3>Success</h3>
             <p>Thanks for your Feedback</p>
-            <a href="{% url 'questionnaire' %}">
+            <a href="{% url 'landing' %}">
                 <button type="submit">Go Home</button>
             </a>
         
