--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -165,3 +165,14 @@ input:valid {
     align-items: center;
     align-content: center;
 }
+
+.alert {
+    width: 100%;
+    height: 120px;
+}
+
+.alert-error {
+    background-color: #fae7e5;
+    border: 1px solid red;
+    color: red;
+}
